contact form addition

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
 
       <div class="pages">
         <ul class="list-container">
-          <li class="side-link">Home</li>
-          <li class="side-link">Contact Us</li>
+          <li class="side-link"><a href="#">Home</a></li>
+          <li class="side-link"><a href="/src/pages/contact/contact.html">Contact Us</a></li>
           <li class="side-link case">Case Studies <i class="material-icons">keyboard_arrow_down</i> </li>
           <li>
             <ul class = inner-list>
@@ -148,7 +148,7 @@
           <div class="layer-three">
             <h3 class="hero-small">for</h3>
             <h1 class="hero-large">15 years</h1>
-            <a href="#" class="cta">Contact us</a>
+            <a href="/src/pages/contact/contact.html" class="cta">Contact us</a>
           </div>
         </div>
       </div>
@@ -642,8 +642,8 @@
           <h1 class = "knowMore-title">Want to know more ?</h1>
           <p class="knowMore-body">For a more in depth view about what we do, see our case studies to see the real impact we have on our clients.</p>
           <div class="button-group">
-            <button class="knowMore-case">Case Studies</button>
-            <button class="knowMore-contact">Contact us</button>
+            <a class="knowMore-case" href="/src/pages/caseStudies/index.html">Case Studies</a>
+            <a class="knowMore-contact" href="/src/pages/contact/contact.html">Contact us</a>
           </div>
         </div>
         <div class="knowMore-graphic">
@@ -756,11 +756,11 @@
       <div class="wrapper">
         <ul class="footer-list">
           <li><h4>About</h4></li>
-          <li><a href="#">Case Studies</a></li>
+          <li><a href="/src/pages/caseStudies/index.html">Case Studies</a></li>
           <li><p>Site by Sean Stanfield</p></li>
         </ul>
         <ul class="footer-list">
-          <li><h4>Contact us</h4></li>
+          <li><h4>Get in touch</h4></li>
           <li><p>info@substanceqi.com</p></li>
           <li><p>07725 593167</p></li>
         </ul>
