--- a/src/pages/caseStudies/index.html
+++ b/src/pages/caseStudies/index.html
@@ -88,7 +88,7 @@
               <a href="../../../index.html">Home</a>
             </li>
             <li class="nav-link nav-blue">
-              <a href="src/pages/casestudies.html">Contact us</a>
+              <a href="/src/pages/contact/contact.html">Contact us</a>
             </li>
           </ul>
           <div class="hamburger-menu">
@@ -104,7 +104,7 @@
         <div class="pages">
           <ul class="list-container">
             <li class="side-link"><a href="../../../index.html">Home</a></li>
-            <li class="side-link">Contact Us</li>
+            <li class="side-link"><a href="/src/pages/contact/contact.html">Contact Us</a></li>
             <li class="side-link case">
               Case Studies <i class="material-icons">keyboard_arrow_down</i>
             </li>
@@ -130,7 +130,7 @@
           </ul>
         </div>
       </div>
-      <div class="dimmer"></div>
+      <!-- <div class="dimmer"></div> -->
       <h1 class="page-title">Case Studies</h1>
       <div class="flex-wrapper">
         <div class="flex-left">
