--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -3,17 +3,210 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contact page</title>
+    <title>Contact Us</title>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <link rel="stylesheet" href="contact.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <h1>basic contact page form</h1>
+    <div class="content">
+      <svg
+        id="casesvg"
+        preserveAspectratio="none"
+        viewBox="0 0 1440 1018"
+        fill="none"
+        xmlns="http://www.w3.org/2000/svg"
+      >
+        <path
+          d="M-2.58852 -9H1439.93V108C1117.43 282.5 930.431 177.672 706.931 223C283.431 308.891 788.5 938 194 1000.5C-400.5 1063 -65.5693 948 -14.5694 734.5L-2.58852 -9Z"
+          fill="url(#paint0_linear)"
+        />
+        <defs>
+          <linearGradient
+            id="paint0_linear"
+            x1="10.9113"
+            y1="3.76725"
+            x2="781.52"
+            y2="827.422"
+            gradientUnits="userSpaceOnUse"
+          >
+            <stop stop-color="#3B5EB9" />
+            <stop offset="1" stop-color="#33C6CF" />
+          </linearGradient>
+        </defs>
+      </svg>
 
-    <form action="contactform.php" method="POST">
-      <input type="text" name="name" placeholder="Your name" />
-      <input type="email" name="email" placeholder="Email" />
-      <input type="text" name="subject" placeholder="Subject" />
-      <input type="text" name="message" placeholder="Your message" />
-      <button type="submit" name="submit">Send Mail</button>
-    </form>
+      <svg
+        id="mobileCase"
+        preserveAspectRatio="none"
+        viewBox="0 0 375 219"
+        fill="none"
+        xmlns="http://www.w3.org/2000/svg"
+      >
+        <path
+          d="M-19.4998 -34.0002L382 -34.0005C382 -34.0005 480 295.5 374 201.5C268 107.5 78.5 234 -0.500267 139C-79.5006 44 -19.4998 -34.0002 -19.4998 -34.0002Z"
+          fill="url(#caseMob_linear)"
+        />
+        <defs>
+          <linearGradient
+            id="caseMob_linear"
+            x1="131.5"
+            y1="-12"
+            x2="219.5"
+            y2="196"
+            gradientUnits="userSpaceOnUse"
+          >
+            <stop stop-color="#2F80ED" />
+            <stop offset="1" stop-color="#10C3D5" />
+          </linearGradient>
+        </defs>
+      </svg>
+
+      <nav class="nav">
+        <div class="logo">
+          <img
+            class="desktop"
+            src="/src/img/substanceqiLogo.svg"
+            alt="substanceqiLogo"
+          />
+          <img
+            class="mobile"
+            src="/src/img/mobileSubstanceqiLogo.svg"
+            alt="substanceqiLogo"
+          />
+        </div>
+        <div class="nav-menu">
+          <ul class="nav-links">
+            <li class="nav-link nav-green">
+              <a href="../../../index.html">Home</a>
+            </li>
+            <li class="nav-link nav-blue">
+              <a href="../caseStudies/index.html">Case Studies</a>
+            </li>
+          </ul>
+          <div class="hamburger-menu">
+            <span class="ham-line"></span>
+            <span class="ham-line"></span>
+            <span class="ham-line"></span>
+          </div>
+        </div>
+      </nav>
+      <div class="sidebar">
+        <div class="cross"></div>
+
+        <div class="pages">
+          <ul class="list-container">
+            <li class="side-link"><a href="../../../index.html">Home</a></li>
+            <li class="side-link"><a href="#">Contact Us</a></li>
+            <li class="side-link case">
+              Case Studies <i class="material-icons">keyboard_arrow_down</i>
+            </li>
+            <li>
+              <ul class = inner-list>
+                <li class="inner-list-item" data-study="ethno financial"> <a href="/src/pages/caseStudies/index.html">Ethnographic Deep Dive - Financial Services</a></li>
+                <li class="inner-list-item" data-study="ethno tobacco"> <a href="/src/pages/caseStudies/index.html">Ethnographic Deep Dive - Tobacco </li></a>
+                <li class="inner-list-item" data-study="innovation b2b"> <a href="/src/pages/caseStudies/index.html">Innovation – Fusion Days – B2B Services </li></a>
+                <li class="inner-list-item" data-study="innovation fmcg"> <a href="/src/pages/caseStudies/index.html">Innovation - Fusion Days - FMCG </li></a>
+                <li class="inner-list-item" data-study="equity telco"> <a href="/src/pages/caseStudies/index.html">Equity Drivers - Quality Perceptions - Telco </li></a>
+                <li class="inner-list-item" data-study="buying habits"> <a href="/src/pages/caseStudies/index.html">Buying Habits - FMCG </li></a>
+                <li class="inner-list-item" data-study="branding fmcg"> <a href="/src/pages/caseStudies/index.html">Branding – Brand Stretch - FMCG</li></a>
+                <li class="inner-list-item" data-study="relationships retail"> <a href="/src/pages/caseStudies/index.html">Relationships – Trade Attitudes - Retail </li></a>
+                <li class="inner-list-item" data-study="pack design"> <a href="/src/pages/caseStudies/index.html">Pack Design - Vaping </li></a>
+                <li class="inner-list-item" data-study="customer moments of truth"> <a href="/src/pages/caseStudies/index.html">Customer Experience – Moments of Truth </li></a>
+                <li class="inner-list-item" data-study="spam utility"> <a href="/src/pages/caseStudies/index.html">S.P.A.M – Communications – Utility </li></a>
+                <li class="inner-list-item" data-study="ethno safari"> <a href="/src/pages/caseStudies/index.html">Ethnographic – Client Safari - FMCG </li></a>
+                <li class="inner-list-item" data-study="sensory food"> <a href="/src/pages/caseStudies/index.html">Sensory Testing – Tactile Dynamics – Food </li></a>
+                <li class="inner-list-item" data-study="user experience online"> <a href="/src/pages/caseStudies/index.html">User Experience – Online Purchasing</li></a>
+                <li class="inner-list-item" data-study="home usage test"> <a href="/src/pages/caseStudies/index.html">Product Testing – Home Usage Test – Tobacco </li></a>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="dimmer"></div>
+      <h1 class="page-title">Contact Us</h1>
+      <div class="flex-wrapper">
+        <div class="flex-left">
+          <section class="contact-info">
+            <div class="contact-group">
+              <h5 class="contact-header">Head Office</h5>
+              <p class = "contact-para">3 Oakleigh Park South</p>
+              <p class = "contact-para">London</p>
+              <p class = "contact-para">N20 9JS</p>
+            </div>
+            <div class="contact-group">
+              <h5 class="contact-header">Meet the directors</h5>
+              <p class = "contact-para">Kevin Stanfield :</p>
+              <p class = "contact-para">kevin.stanfield@substanceqi.com</p>
+              <p class = "contact-para">Alan Walters :
+              </p>
+              <p class = "contact-para">Alan.walters@substanceqi.com
+              </p>
+            </div>
+            <div class="contact-group">
+              <h5 class="contact-header">Our info</h5>
+              <p class = "contact-para">info@substanceqi.com</p>
+              <p class = "contact-para">07725 593167</p>
+            </div>
+          </section>
+        </div>
+
+        <div class="flex-right">
+          <div id="mainContent">
+            <h1 class="send-message">Send us a message</h1>
+
+            <form action="contactform.php" method="POST">
+              <span class="flex-bubble half">
+                <label for="name">Full name</label>
+                <input type="text" name="name" placeholder="" />
+              </span>
+              <span class="flex-bubble half">
+                <label for="phone">Phone Number</label>
+                <input type="tel" name="phone" placeholder="">
+              </span>
+              <span class="flex-bubble">
+                <label for="email">Email</label>
+                <input type="email" name="email" placeholder="" />
+              </span>
+              <span class="flex-bubble">
+                <label for="company">Company</label>
+                <input type="text" name="company" placeholder=""/>
+                
+              </span>
+              <span class="flex-bubble large">
+                <label for="message">Message</label>
+                
+                <textarea class="message" name = "message" cols = "60" rows = "8"></textarea>
+              </span>
+              <button type="submit" name="submit">Send</button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+        <footer>
+          <div class="wrapper">
+            <ul class="footer-list">
+              <li><h4>About</h4></li>
+              <li><a href="/src/pages/caseStudies/index.html">Case Studies</a></li>
+              <li><p>Site by Sean Stanfield</p></li>
+            </ul>
+            <ul class="footer-list">
+              <li><h4>Contact us</h4></li>
+              <li><p>info@substanceqi.com</p></li>
+              <li><p>07725 593167</p></li>
+            </ul>
+          </div>
+        </footer>
+
+    <script src="../../js/adaptive.js"></script>
+    <script src="../../js/hamburger.js"></script>
   </body>
 </html>
