added current page to desktop navigation

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
       </div>
       <div class="nav-menu">
         <ul class="nav-links">
+          <li class="nav-link nav-green"><a href="#"><strong>Home</strong></a></li>
           <li class="nav-link nav-green"><a href="src/pages/caseStudies/index.html">Case Studies</a></li>
           <li class="nav-link nav-blue"><a href="src/pages/contact/contact.html">Contact</a></li>
         </ul>
