--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -90,6 +90,9 @@
             <li class="nav-link nav-blue">
               <a href="../caseStudies/index.html">Case Studies</a>
             </li>
+            <li class="nav-link nav-blue">
+              <a href="#"><strong>Contact</strong></a>
+            </li>
           </ul>
           <div class="hamburger-menu">
             <span class="ham-line"></span>
