--- a/src/pages/caseStudies/index.html
+++ b/src/pages/caseStudies/index.html
@@ -87,6 +87,9 @@
             <li class="nav-link nav-green">
               <a href="../../../index.html">Home</a>
             </li>
+            <li class="nav-link nav-green">
+              <a href = "#"><strong>Case Studies</strong></a>
+            </li>
             <li class="nav-link nav-blue">
               <a href="/src/pages/contact/contact.html">Contact us</a>
             </li>
