unleaded the dimmer

--- a/src/pages/caseStudies/index.html
+++ b/src/pages/caseStudies/index.html
@@ -133,7 +133,7 @@
           </ul>
         </div>
       </div>
-      <!-- <div class="dimmer"></div> -->
+      <div class="dimmer"></div>
       <h1 class="page-title">Case Studies</h1>
       <div class="flex-wrapper">
         <div class="flex-left">
