added contact gradient

--- a/src/pages/caseStudies/index.html
+++ b/src/pages/caseStudies/index.html
@@ -206,10 +206,14 @@
         <div class="flex-right">
           <div id="mainContent">
             <div id="guts">
-              <h2 id="studyTitle">Random Case Study Title</h2>
+              <h2 id="studyTitle">Ethnographic Deep Dive – Financial Services</h2>
 
               <p id="studyBody">
-                Random body for some content
+                Every few years it is common for a client to undertake a reassessment of their category and ensure the rules of engagement still apply. On this occasion our client wanted to understand the deeper meaning and consumer interpretation of the notion of ‘Loyalty & Reward’ .
+
+The research was less about products and more about the emotional engagement and trigger points people have with their inner self. How, when and why do people feel committed and the conscious and unconscious factors that influence these motivations.
+
+This project required a lot of projective and enabling techniques to understand the consumer psyche. The insight from the study created a potential new positioning space for future development. 
               </p>
             </div>
           </div>
